--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,13 @@
     background: url(../img/bg_stell.jpg);
     border-top: 1px solid #ffffff;
     border-bottom: 1px solid #2d3842;
-    margin: 9px 0 6px;
+    margin: 15px 0 6px;
     min-height: 40px;
 }
 
 .cv-header-social {
     text-align: right;
-    padding-right: 75px;
+    padding-right: 40px;
 }
 
 .cv-header-social li {
@@ -311,7 +311,7 @@ aside img {
 .cv-footer {
     background-color: #353c4c;
     background: linear-gradient(90deg, #111318 0%, #57627d 50%, #111318 100%);
-    padding: 5px 0 50px;
+    padding: 5px 0 20px;
 }
 
 .footer-contacts {
@@ -322,6 +322,7 @@ aside img {
     margin: 5px 0 5px;
     padding: 2px;
     text-align: center;
+    min-height: 40px;
 }
 
 .footer-contacts li {
