change icon & photo

--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,20 @@ aside img {
     left: -9px;
 }
 
+.dot::before {
+    content: "";
+    width: 8px;
+    height: 8px;
+    background-color: #24262d;
+    background-color: #2d2d2d;
+    border-radius: 8px;
+    /* border: solid 4px #b9c4ca; */
+    display: block;
+    position: absolute;
+    top: 6px;
+    left: -5px;
+}
+
 .cv-main span {
     font-weight: bold;
 }
