--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ aside li {
 
 aside a:hover {
     color: #b44328;
+    font-weight: bold;
 }
 
 aside img {
@@ -214,7 +215,7 @@ aside img {
 }
 
 .cv-content {
-    padding: 20px 30px 0 45px;
+    padding: 20px 30px 20px 45px;
     background-color: #e7e7e7;
     box-sizing: border-box;
     box-shadow: inset 6px 0px 5px -2px #00000094;
